force-app/main/default/objects/Solution_Count__c/Solution_Count__c.object-meta.xml
<CustomObject>
    <label>Solution Count</label>
    <nameField>
        <displayFormat>SC-{000000000}</displayFormat>
        <label>Solution Count Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>