force-app/main/default/objects/Solution_Count__c/fields/First_Time_Flash_Message__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Flash_Message__c</fullName>
    <label>First Time Flash Message</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>