force-app/main/default/objects/Solution_Count__c/fields/Number_of_Solutions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Solutions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Solutions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>